--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <h1 class="lobster">WebDev Protfolio</h1>
       </div>
       <nav>
-        <a href="..\MyWebsite\index.html"><i class="fa fa-home"></i>Home</a>
-        <a href="..\MyWebsite\sidepage.html"><i class="fa fa-briefcase"></i>My Works</a>
+        <a href="..\index.html"><i class="fa fa-home"></i>Home</a>
+        <a href="..\sidepage.html"><i class="fa fa-briefcase"></i>My Works</a>
         <a id="aboutBtn"><i class="fa fa-comment"></i>About</a>
         <a id="contactBtn"><i class="fa fa-envelope"></i>Contact Me</a>
       </nav>
