--- a/sidepage.html
+++ b/sidepage.html
@@ -36,22 +36,22 @@
         <section>
           <h1 class="lobster">My Works</h1>
           <div class="project-gallery">
-            <a href="..\MyWebsite\lab act 2\labact2.html" class="project-card">
+            <a href="..\lab act 2\labact2.html" class="project-card">
               <img src="labact2.png" alt="labact2">
               <h3>Laboratory Activity 2</h3>
               <p>This project consists of using basic HTML tags.</p>
             </a>
-            <a href="..\MyWebsite\lab act 3\LabAct3_Canlas.html" class="project-card">
+            <a href="..\lab act 3\LabAct3_Canlas.html" class="project-card">
               <img src="labact3.png" alt="labact3">
               <h3>Laboratory Activity 3</h3>
               <p>This project consists of using table tags.</p>
             </a>
-            <a href="..\MyWebsite\lab act 4\index.html" class="project-card">
+            <a href="..\lab act 4\index.html" class="project-card">
               <img src="labact4.png" alt="labact4">
               <h3>Laboratory Activity 4</h3>
               <p>This project consists of using different forms.</p>
             </a>
-            <a href="..\MyWebsite\lab act 5\index.html" class="project-card">
+            <a href="..\lab act 5\index.html" class="project-card">
               <img src="labact5.png" alt="labact6">
               <h3>Laboratory Activity 5</h3>
               <p>This project consists of using grid layout.</p>
