--- a/sidepage.html
+++ b/sidepage.html
@@ -26,7 +26,7 @@
       <nav>
         <a href="..\index.html"><i class="fa fa-home"></i>Home</a>
         <a href="..\sidepage.html"><i class="fa fa-briefcase"></i>My Works</a>
-        <a id="aboutBtn"><i class="fa fa-comment"></i>About</a>
+        <a id="aboutBtn"><i class="fa fa-comment"></i>CV</a>
         <a id="contactBtn"><i class="fa fa-envelope"></i>Contact Me</a>
       </nav>
     </header>
@@ -87,7 +87,48 @@
     <div id="aboutModal" class="modal">
       <div class="modal-content">
         <span2 class="close2">&times;</span2>
-        <h2>This project was made for the completion of reqirements under IT0043. This project utilizes every module taught to us so far.  </h2>
+        <p>
+          Xander David A. Canlas<br>
+          +6309693545808<br>
+          x.canlas04@gmail.com<br>
+          GitHub: XanderrDC<br>
+        </p>
+        <p>
+          Learning first-year cybersecurity student with knowledge about multiple PL and strong organizational skills. Seeking to expand skills and knowledge in collage.
+        </p>
+        <p>
+          <b>EDUCATION</b><br>
+          Bachelor of Science in Information Technology specialization in Cybersecurity<br>
+          FEU Institute of Technology, Manila, Philippines<br>
+          Expected Graduation: 2029<br>
+        </p>
+        <p>
+          Senior High School<br>
+          School of Saint Anthony, Quezon City, Philippines<br>
+          Graduated: 2024 (With honors)<br>
+        </p>
+        <p>
+          High School<br>
+          School of Saint Anthony, Quezon City, Philippines<br>
+          Graduated: 2022<br>
+        </p>
+        <p>
+          Elementary<br>
+          Mercedarian School, Quezon City, Philippines<br>
+          Graduated: 2028<br>
+        </p>  
+        <p>
+          <b>SKILLS</b><br>
+          Technical Skills:<br>
+          - Basic knowledge in Web Development<br>
+          - Basic knowledge in C++, Java, and VB<br>
+          - Google Applications (Sheets, Docs, Slides, Forms)<br>
+          - Adobe Application (Photoshop, Illustrate, Premier, AE)<br>
+          Soft Skills:<br>
+          - Team Collaboration<br>
+          - On-demand Learning<br>
+          - Task Simplification<br>
+        </p>
       </div>
     </div>
 
