--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <nav>
         <a href="..\index.html"><i class="fa fa-home"></i>Home</a>
         <a href="..\sidepage.html"><i class="fa fa-briefcase"></i>My Works</a>
-        <a id="aboutBtn"><i class="fa fa-comment"></i>CV</a>
+        <a id="CVBtn"><i class="fa fa-comment"></i>CV</a>
         <a id="contactBtn"><i class="fa fa-envelope"></i>Contact Me</a>
       </nav>
     </header>
@@ -71,7 +71,7 @@
       </div>
     </div>
 
-    <div id="aboutModal" class="modal">
+    <div id="CVModal" class="modal">
       <div class="modal-content">
         <span2 class="close2">&times;</span2>
         <p>
